<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.flexlb</groupId>
        <artifactId>flexlb</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>flexlb-api</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.flexlb</groupId>
            <artifactId>flexlb-sync</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <!-- Internal profile - automatically activated when internal dependencies exists -->
        <profile>
            <id>internal</id>
            <activation>
                <file>
                    <exists>../../../../internal_source</exists>
                </file>
            </activation>
            <dependencies>
                <!-- KMonitor integration - provides real monitoring implementation -->
                <dependency>
                    <groupId>org.flexlb</groupId>
                    <artifactId>kmonitor</artifactId>
                </dependency>
                <!-- VipServer integration - provides service discovery implementation -->
                <dependency>
                    <groupId>org.flexlb</groupId>
                    <artifactId>vipserver</artifactId>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 解压fat jar到target/${project-name}目录 -->
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <unzip
                                    src="${project.build.directory}/${project.build.finalName}.${project.packaging}"
                                    dest="${project.build.directory}/FlexLB" />
                                <!-- 创建tgz包 -->
                                <tar destfile="${project.build.directory}/ai-whale.tgz" compression="gzip">
                                    <tarfileset dir="${project.build.directory}/FlexLB" prefix="FlexLB"/>
                                </tar>
                                <!-- 复制到docker构建上下文 -->
                                <copy file="${project.build.directory}/ai-whale.tgz"
                                      tofile="${project.basedir}/../APP-META/docker-config/ai-whale.tgz"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
